aggiunto blog e modificato post-articoli, corretto warning per DAYJS

--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="extended===false" class="w-full my-5">
-    <div class="w-full max-w-sm">
+    <div class="w-full max-w-xl">
         <div class="relative">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
                 <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
@@ -87,7 +87,7 @@
     <div class="bg-secondary h-1 ml-3"></div>
 </div>
 <div *ngIf="extended===true" class="lg:hidden w-full my-5">
-    <div class="w-full max-w-sm">
+    <div class="w-full max-w-xl">
         <div class="relative">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
                 <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
