--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -56,7 +56,7 @@
     </div>
 </section>
 
-<section class="">
+<section class="mt-5">
     <div class="flex justify-center">
         <div class="container flex justify-center">
             <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
@@ -67,10 +67,9 @@
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
                 <div class="mt-10 flex flex-wrap justify-center lg:justify-between">
-                    <app-articolo [extended]="true"></app-articolo>
-                    <app-articolo [extended]="false"></app-articolo>
-                    <app-articolo [extended]="false"></app-articolo>
-                    <app-articolo [extended]="false"></app-articolo>
+                    <app-post-articolo [extended]="true"></app-post-articolo>
+                    <app-post-articolo [extended]="false"></app-post-articolo>
+                    <app-post-articolo [extended]="false"></app-post-articolo>
                 </div>
             </div>
         </div>
