--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -150,17 +150,7 @@
             </div>
         </div>
     </div>
-    <div class="my-10 flex justify-center">
-        <div class="lg:w-[90%] w-full flex flex-wrap justify-center">
-            <div class="w-full h-20 bg-primary flex justify-center items-center">
-                <h2 class=" text-white text-4xl font-bold">
-                    PARTITE
-                </h2>
-            </div>
-            <div class="w-full h-6 bg-secondary"></div>
-        </div>
-    </div>
-    <div class="flex justify-center">
+    <div class="flex justify-center mt-10">
         <div class="container flex justify-center w-full">
             <div class="w-[90%] flex flex-wrap">
                 <div class="lg:w-1/3 w-full mb-5" *ngFor="let match of matchToday, let ind=index">
