--- a/NBA/src/app/views/blog-page/blog-page.component.html
+++ b/NBA/src/app/views/blog-page/blog-page.component.html
@@ -1,6 +1,12 @@
 <app-navbar></app-navbar>
 <section class="">
-    <div class="flex justify-center">
+    <div class="w-full h-20 bg-primary flex justify-center items-center">
+        <h2 class=" text-white text-4xl font-bold">
+            BLOG
+        </h2>
+    </div>
+    <div class="w-full h-6 bg-secondary"></div>
+    <div class="flex justify-center mt-10">
         <div class="container flex justify-center">
             <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
                 <div class="w-full h-20 bg-primary flex justify-center items-center">
