--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </section>
-<div class="" *ngFor="let match of matchCalendar.previousMatch, let i=index">
+<div class="" *ngFor="let match of matchCalendar.next Match, let i=index">
     <div class="">
         {{match.gameid}} , {{match.gameStartDate}}
     </div>
