--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -4,15 +4,11 @@
         <div class="container h-full flex flex-wrap justify-center">
             <div class="lg:h-16 h-10 w-full flex justify-around mt-10">
                 <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
-                    <li class="w-1/3 h-full flex justify-center items-center rounded-2xl">
-                        <button class="w-full text-cente lg:text-3xl">SQUADRA</button>
+                    <li class="w-1/2 h-full flex justify-center items-center rounded-2xl">
+                        <button class="w-full text-cente lg:text-3xl">SQUADRA & CALENDARIO</button>
                     </li>
 
-                    <li class="w-1/3 h-full flex justify-center items-center rounded-2xl">
-                        <button class="w-full text-center lg:text-3xl">GLOSSARIO</button>
-                    </li>
-
-                    <li class="w-1/3 h-full flex justify-center items-center rounded-2xl">
+                    <li class="w-1/2 h-full flex justify-center items-center rounded-2xl">
                         <button class="w-full text-center lg:text-3xl">GIOCATORI</button>
                     </li>
                 </ul>
@@ -38,11 +34,11 @@
                         </p></li>
                     </ul>
                 </div>
-                <div class="w-full h-2/3 border-t-4 border-white">
+                <div class="w-full h-full border-t-4 border-white">
 
                 </div>
             </div>
-            <div class="h-[50vh] w-[90%] bg-secondary flex flex-wrap my-10">
+            <!-- <div class="h-[50vh] w-[90%] bg-secondary flex flex-wrap my-10">
                 <div class="w-full h-1/3 border-r-2 border-white flex items-center">
                     <div class="w-1/2 flex flex-nowrap">
                         <div class="w-1/4 h-full flex justify-center items-center">
@@ -59,11 +55,11 @@
                 <div class="w-full h-2/3 border-t-4 border-white">
 
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
-<div class="" *ngFor="let match of matchCalendar.nextMatch, let i=index">
+<!-- <div class="" *ngFor="let match of matchCalendar.nextMatch, let i=index">
     <div class="">
         {{match.gameid}} , {{match.gameStartDate}}
     </div>
@@ -72,5 +68,5 @@
     <div class="">
         {{player.firstName}}  {{player.lastName}}
     </div>
-</div>
+</div> -->
 <app-footer></app-footer>
