--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -16,7 +16,7 @@
                 </ul>
             </div>
 
-            <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
+            <!-- <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
                 <div class="lg:w-[90%] w-full flex flex-wrap justify-center">
                     <div class="w-full h-20 bg-primary flex justify-center items-center">
                         <h2 class=" text-white text-4xl font-bold">
@@ -25,21 +25,21 @@
                     </div>
                     <div class="w-full h-6 bg-secondary"></div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="h-[50vh] w-[90%] bg-secondary flex flex-wrap my-10"  *ngIf="isSelectedTeam === true">
-                <div class="w-1/2 h-1/3 border-r-2 border-white flex justify-around flex-nowrap">
+                <div class="w-1/2 h-1/3 border-r-2 border-white flex justify-around flex-nowrap bg-primary">
                     <div class="w-1/4 h-full flex justify-center items-center">
                         <div class="rounded-full bg-white lg:w-24 lg:h-24">
                             <img src="../../../assets/logo-slam-stats.png" class="object-contain h-full" alt="">
                         </div>
                     </div>
-                    <div class="w-2/4 flex flex-wrap justify-center items-center">
+                    <div class="w-2/4 flex flex-wrap justify-center items-center ">
                         <p class="w-full h-1/2 text-white flex items-end text-3xl">NOME SQUADRA</p>
                         <p class="w-full h-1/2 text-white text-2xl">N pos° East Conference</p>
                     </div>
                 </div>
-                <div class="w-1/2 h-1/3 border-l-2 border-white text-white flex justify-center items-center">
+                <div class="w-1/2 h-1/3 border-l-2 border-white text-white flex justify-center items-center bg-primary">
                     <ul class="px-8">
                         <li class="w-full"><p class="text-xl"><b class="text-2xl">Campo</b><span>:</span> TD Garden</p></li>
                         <li class="w-full"><p class="text-xl"><b class="text-2xl">Località</b><span>:</span>
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
                 <div class="w-full h-full border-t-4 border-white">
-
+                    <!-- tabella statistiche squadra -->
                 </div>
             </div>
             <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
