--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -14,7 +14,7 @@
                 <p class="px-4 py-2 text-white">La National Basketball Association (NBA), una delle leghe sportive più prestigiose al mondo, ha una storia ricca e affascinante che ha avuto inizio il 6 giugno 1946 a New York City sotto il nome di Basketball Association of America (BAA)...</p>
             </div>
 
-            <div class="flex flex-nowrap justify-between mt-2">
+            <div class="flex flex-nowrap justify-between mt-2 lg:mx-0 ml-2">
                 <div class="flex flex-nowrap">
                     <p class="text-sm flex items-center">
                         da/ta/aa 16:23 I n°foto
@@ -102,7 +102,7 @@
                 <p class="px-4 py-2 text-white">La National Basketball Association (NBA), una delle leghe sportive più prestigiose al mondo, ha una storia ricca e affascinante che ha avuto inizio il 6 giugno 1946 a New York City sotto il nome di Basketball Association of America (BAA)...</p>
             </div>
 
-            <div class="flex flex-nowrap justify-between mt-2">
+            <div class="flex flex-nowrap justify-between mt-2 lg:mx-0 ml-2">
                 <div class="flex flex-nowrap">
                     <p class="text-sm flex items-center">
                         da/ta/aa 16:23 I n°foto
