--- a/NBA/src/app/components/footer/footer.component.html
+++ b/NBA/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
             <div class="md:w-full w-full flex">
                 <div class="md:w-1/4 w-1/3">
                     <h3 class="flex justify-center">PAGINE</h3>
-                    <ul class="flex flex-col items-start h-full m-4">
+                    <ul class="flex flex-col items-start m-4">
                         <li [routerLink]="['/home']">HOME</li>
                         <li [routerLink]="['/classifica']">CLASSIFICA</li>
                         <li [routerLink]="['/calendario']">CALENDARIO</li>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="md:w-1/4 w-1/3">
                     <h3 class="text-white flex justify-center">CONTATTI</h3>
-                    <ul class="flex flex-col items-start h-full m-4">
+                    <ul class="flex flex-col items-start m-4">
                         <li [routerLink]="['/']">Maps</li>
                         <li [routerLink]="['/']">Mail1</li>
                         <li [routerLink]="['/']">Mail2</li>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="md:w-1/4 w-1/3">
                     <h3 class="text-white flex justify-center">SOCIAL</h3>
-                    <ul class="flex flex-col items-start h-full m-4">
+                    <ul class="flex flex-col items-start m-4">
                         <li [routerLink]="['/']">Instagram</li>
                         <li [routerLink]="['/']">Facebook</li>
                         <li [routerLink]="['/']">X</li>
@@ -40,8 +40,8 @@
             </div>
         </div>
     </div>
-    <div class="w-full flex justify-center">
-        <p>Powered By: Slam Dunkers</p>
+    <div class="w-full h-auto flex justify-center">
+        <p class="font-bold">Powered By: Slam Dunkers</p>
     </div>
 </div>
 
