--- a/NBA/src/app/views/blog-page/blog-page.component.html
+++ b/NBA/src/app/views/blog-page/blog-page.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 </section>
-<section class="">
+<section class="my-10">
     <div class="flex justify-center">
         <div class="container flex justify-center">
             <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
@@ -43,7 +43,7 @@
         </div>
     </div>
 </section>
-<section class="">
+<section class="my-10">
     <div class="flex justify-center">
         <div class="container flex justify-center">
             <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
