--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -1,102 +1,109 @@
 <app-navbar></app-navbar>
 <section>
     <div class="flex h-full justify-center">
-        <div class="container h-full flex flex-wrap justify-center">
-            <div class="lg:h-16 h-10 w-full flex justify-around mt-10">
-                <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
-                    
-                    <li [ngClass]="{'bg-secondary': isSelectedTeam === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isSelectedTeam === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
-                        <button (click)="selectedTeam(true)" [class.text-white]="isSelectedTeam === true" class="w-full text-center text-white lg:text-3xl">SQUADRA & CALENDARIO</button>
-                    </li>
-        
-                    <!-- Secondo elemento della lista -->
-                    <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isSelectedTeam === true, 'bg-secondary': isSelectedTeam === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
-                        <button (click)="selectedTeam(false)" [class.text-white]="isSelectedTeam === false" class="w-full text-center lg:text-3xl">GIOCATORI</button>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
-                <div class="lg:w-[90%] w-full flex flex-wrap justify-center">
-                    <div class="w-full h-20 bg-primary flex justify-center items-center">
-                        <h2 class=" text-white text-4xl font-bold">
-                            SQUADRA
-                        </h2>
-                    </div>
-                    <div class="w-full h-6 bg-secondary"></div>
+        <div class="container h-full w-full flex flex-wrap justify-center">
+            <div class="w-full flex flex-wrap justify-center">
+                <div class="w-full h-20 bg-primary flex justify-center items-center">
+                    <h2 class=" text-white text-4xl font-bold">
+                        {{teamStatistics.team.teamName | uppercase}}
+                    </h2>
                 </div>
-            </div> -->
-
-            <div class="h-[50vh] w-[90%] bg-secondary flex flex-wrap my-10"  *ngIf="isSelectedTeam === true">
-                <div class="w-1/2 h-1/3 border-r-2 border-white flex justify-around flex-nowrap bg-primary">
-                    <div class="w-1/4 h-full flex justify-center items-center">
-                        <div class="rounded-full bg-white lg:w-24 lg:h-24">
-                            <img src="../../../assets/logo-slam-stats.png" class="object-contain h-full" alt="">
+                <div class="w-full h-6 bg-secondary"></div>
+            </div>
+            <div class="lg:w-[90%] w-full lg:flex lg:flex-wrap lg:justify-center">
+                <div class="lg:w-[90%] w-full">
+                    <div class="lg:h-16 h-10 w-full flex justify-around mt-10">
+                        <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
+                    
+                            <li [ngClass]="{'bg-secondary': isSelectedTeam === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isSelectedTeam === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
+                                <button (click)="selectedTeam(true)" [class.text-white]="isSelectedTeam === true" class="w-full text-center text-white lg:text-3xl">SQUADRA & CALENDARIO</button>
+                            </li>
+                            <!-- Secondo elemento della lista -->
+                            <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': isSelectedTeam === true, 'bg-secondary': isSelectedTeam === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
+                                <button (click)="selectedTeam(false)" [class.text-white]="isSelectedTeam === false" class="w-full text-center lg:text-3xl">GIOCATORI</button>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
+                        <div class="lg:w-[90%] w-full flex flex-wrap justify-center">
+                            <div class="w-full h-20 bg-primary flex justify-center items-center">
+                                <h2 class=" text-white text-4xl font-bold">
+                                    SQUADRA
+                                </h2>
+                            </div>
+                            <div class="w-full h-6 bg-secondary"></div>
+                        </div>
+                    </div> -->
+                    <div class="h-[50vh] w-full bg-secondary flex flex-wrap my-10"  *ngIf="isSelectedTeam === true">
+                        <div class="w-1/2 h-1/3 border-r-2 border-white flex justify-around flex-nowrap bg-primary">
+                            <div class="w-1/4 h-full flex justify-center items-center">
+                                <div class="rounded-full bg-white lg:w-24 lg:h-24">
+                                    <img src="../../../assets/logo-slam-stats.png" class="object-contain h-full" alt="">
+                                </div>
+                            </div>
+                            <div class="w-2/4 flex flex-wrap justify-center items-center ">
+                                <p class="w-full h-1/2 text-white flex items-end text-3xl">NOME SQUADRA</p>
+                                <p class="w-full h-1/2 text-white text-2xl">N pos° East Conference</p>
+                            </div>
+                        </div>
+                        <div class="w-1/2 h-1/3 border-l-2 border-white text-white flex justify-center items-center bg-primary">
+                            <ul class="px-8">
+                                <li class="w-full"><p class="text-xl"><b class="text-2xl">Campo</b><span>:</span> TD Garden</p></li>
+                                <li class="w-full"><p class="text-xl"><b class="text-2xl">Località</b><span>:</span>
+                                    Boston, Massachusetts, Stati Uniti,
+                                        New Egland, Stati Uniti
+                                </p></li>
+                            </ul>
+                        </div>
+                        <div class="w-full h-full border-t-4 border-white">
+                            <!-- tabella statistiche squadra -->
                         </div>
                     </div>
-                    <div class="w-2/4 flex flex-wrap justify-center items-center ">
-                        <p class="w-full h-1/2 text-white flex items-end text-3xl">NOME SQUADRA</p>
-                        <p class="w-full h-1/2 text-white text-2xl">N pos° East Conference</p>
+                </div>
+                <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
+                    <div class="w-full flex flex-wrap justify-center">
+                        <div class="w-full h-20 bg-primary flex justify-center items-center">
+                            <h2 class=" text-white text-4xl font-bold">
+                                CALENDARIO
+                            </h2>
+                        </div>
+                        <div class="w-full h-6 bg-secondary"></div>
                     </div>
                 </div>
-                <div class="w-1/2 h-1/3 border-l-2 border-white text-white flex justify-center items-center bg-primary">
-                    <ul class="px-8">
-                        <li class="w-full"><p class="text-xl"><b class="text-2xl">Campo</b><span>:</span> TD Garden</p></li>
-                        <li class="w-full"><p class="text-xl"><b class="text-2xl">Località</b><span>:</span>
-                            Boston, Massachusetts, Stati Uniti,
-                                New Egland, Stati Uniti
-                        </p></li>
-                    </ul>
+                <div class="lg:w-[90%] w-full lg:flex lg:justify-center overflow-x-auto">
+                   <table class="w-full table-auto" *ngIf="isSelectedTeam === true">
+                        <thead class="bg-primary text-white lg:w-full w-full">
+                            <tr>
+                                <th class="lg:w-[5%]  w-auto"><p class="w-full text-center px-3">DATA</p></th>
+                                <th class="lg:w-[10%] w-auto"><p class="w-full text-center px-3">ORARIO</p></th>
+                                <th class="lg:w-[15%] w-auto"><p class="w-full text-center px-3">AVVERSARIO</p></th>
+                                <th class="lg:w-[10%] w-auto"><p class="w-full text-center px-3">RISULTATO</p></th>
+                                <th class="lg:w-[15%] w-auto"><p class="w-full text-center px-3">PUNTEGGIO</p></th>
+                            </tr>
+                        </thead>
+                        <tbody class="lg:w-full w-full">
+                            <tr *ngFor="let _ of ripetiArray.slice(0, cardToShow), let i = index">
+                                <td class="lg:w-[15%] w-auto"><p class="w-full text-center px-3">11/01/2024</p></td>
+                                <td class="lg:w-[10%] w-auto"><p class="w-full text-center px-3">02:00</p></td>
+                                <td class="lg:w-[5%]  w-auto"><p class="w-full text-center px-3">LAL</p></td>
+                                <td class="lg:w-[10%] w-auto"><p class="w-full text-center px-3">W</p></td>
+                                <td class="lg:w-[10%] w-auto"><p class="w-full text-center px-3">88-91</p></td>
+                                <td class="lg:w-[50%] w-auto">
+                                    <div class="w-full flex justify-end mx-2" routerLink="/tabellino"><button  class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <div class="w-full h-full border-t-4 border-white">
-                    <!-- tabella statistiche squadra -->
-                </div>
-            </div>
-            <div class="my-10 flex w-full justify-center"  *ngIf="isSelectedTeam === true">
-                <div class="lg:w-[90%] w-full flex flex-wrap justify-center">
-                    <div class="w-full h-20 bg-primary flex justify-center items-center">
-                        <h2 class=" text-white text-4xl font-bold">
-                            CALENDARIO
-                        </h2>
-                    </div>
-                    <div class="w-full h-6 bg-secondary"></div>
-                </div>
-            </div>
-            <div class="w-full flex justify-center">
-               <table class="lg:w-[75%] w-full" *ngIf="isSelectedTeam === true">
-                    <thead class="bg-primary text-white lg:w-full w-full">
-                        <tr>
-                            <th class="lg:w-[5%] w-[10%]">DATA</th>
-                            <th class="lg:w-[10%] w-[10%]">ORA</th>
-                            <th class="lg:w-[15%] w-[10%]">AVVERSARIO</th>
-                            <th class="lg:w-[10%] w-[10%]">RISULTATO</th>
-                            <th class="lg:w-[10%] w-[10%]">PUNTEGGIO</th>
-                            <th class="lg:w-[50%] w-[30%] bg-white"></th>
-                        </tr>
-                    </thead>
-                    <tbody class="lg:w-full w-full">
-                        <tr *ngFor="let _ of ripetiArray.slice(0, cardToShow), let i = index">
-                            <td class="lg:w-[15%] w-[5%]">11/01/2024</td>
-                            <td class="lg:w-[10%] w-[5%]">02:00</td>
-                            <td class="lg:w-[5%] w-[5%]">LAL</td>
-                            <td class="lg:w-[10%] w-[5%]">W</td>
-                            <td class="lg:w-[10%] w-[5%]">88-91</td>
-                            <td class="lg:w-[50%] w-[30%]">
-                                <div class="w-full flex justify-end" routerLink="/tabellino"><button  class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table> 
-            </div>
-            
-            <div class="w-full h-auto mb-10 mt-10 flex justify-center items-center" *ngIf="isSelectedTeam === true">
-                <button *ngIf="cardToShow < ripetiArray.length" class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" (click)="showMore()">
-                    Scopri altro
-                </button>
-            </div>
-
-            <div *ngIf=" isSelectedTeam === false" class="w-full">
                 
+                <div class="w-full h-auto mb-10 mt-10 flex justify-center items-center" *ngIf="isSelectedTeam === true">
+                    <button *ngIf="cardToShow < ripetiArray.length" class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" (click)="showMore()">
+                        Scopri altro
+                    </button>
+                </div>
+                <div *ngIf=" isSelectedTeam === false" class="w-full">
+                
+                </div>
             </div>
         </div>
     </div>
