correzioni mobile e aggiunta cartella immagini ad assets

--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.css
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.css
@@ -1,5 +1,12 @@
-.altezza{
-    height: 450px;
+@media (min-width: 1024px) {
+    .altezza {
+      height: 420px;
+    }
+}
+@media (min-width: 1024px) {
+    .altezza2 {
+      height: 320px;
+    }
 }
 
 .highlighted{
