--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -49,9 +49,9 @@
         </section>
         <section *ngIf="selectedRegole === true">
           <section>
-            <div class="w-full lg:altezza flex justify-center mb-2 mt-12">
+            <div class="w-full altezza h-32 flex justify-center mb-2 mt-12">
               <img
-                class="object-cover w-full rounded-[25px]"
+                class="object-cover  w-full lg:h-full h-32 rounded-[25px]"
                 src="https://www.outpump.com/wp-content/uploads/2020/01/outpump-sport-logo-basketball-nba.jpg"
                 alt=""
               />
@@ -71,14 +71,14 @@
                     forse avete già visto partite della nazionale italiana ai
                     mondiali o alle olimpiadi.
                   </h3>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     A differenza di altri sport americani come il football
                     americano, il baseball e l'hockey, il basket è molto
                     popolare in Italia. Potrebbe essere che non abbiate mai
                     visto una partita di football americano, baseball o hockey
                     sul ghiaccio.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Se non siete grandi appassionati di sport, ma volete vivere
                     l'atmosfera unica delle partite negli Stati Uniti, l'NBA
                     potrebbe essere la scelta migliore.
@@ -109,7 +109,7 @@
                       complicati da capire, mentre l'hockey è una via di mezzo.
                     </li>
                   </ul>
-                  <p class="mt-4 text-base">
+                  <p class="mt-4 lg:text-base">
                     In breve, se volete avvicinarvi al clima delle partite negli
                     Stati Uniti e preferite uno sport più facile da seguire,
                     l'NBA potrebbe essere la scelta giusta per voi.
@@ -161,7 +161,7 @@
                       causa di queste interruzioni.
                     </li>
                   </ul>
-                  <p class="mt-4 text-base">
+                  <p class="mt-4 lg:text-base">
                     In breve, la partita si divide in quarti di 12 minuti, ci
                     sono pause lunghe e brevi, e il cronometro si ferma quando
                     la palla non è in gioco, rendendo la durata totale della
@@ -198,12 +198,12 @@
                     Vince chi fa più punti, ed ecco perché l'NBA è semplice
                     rispetto ad altre leghe.
                   </h3>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Segnare, o fare canestro, è il modo principale per ottenere
                     punti e rendere più facile seguire la partita con
                     entusiasmo.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Se non siete grandi appassionati di sport, ma volete vivere
                     l'atmosfera unica delle partite negli Stati Uniti, l'NBA
                     potrebbe essere la scelta migliore.
@@ -232,7 +232,7 @@
                       2 punti.
                     </li>
                   </ul>
-                  <p class="mt-4 text-base">
+                  <p class="mt-4 lg:text-base">
                     Può capitare di segnare 4 punti? Sì, è possibile quando un
                     giocatore fa una tripla e subisce un fallo. In questo caso,
                     oltre ai 3 punti per il canestro, il giocatore ha la
@@ -257,7 +257,7 @@
                   squadra avversaria. Alla sesta infrazione il giocatore deve
                   abbandonare il campo.
                 </h3>
-                <p class="mb-4 text-base">
+                <p class="mb-4 lg:text-base">
                   Le sostituzioni non hanno limite quindi spesso c’è un gioco di
                   strategia nel quale si gestiscono i falli per ogni giocatore.
                 </p>
@@ -407,24 +407,24 @@
                     È importante sapere che in tutte le leghe americane ci sono
                     divisioni chiamate Conference.
                   </h3>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Nella NBA, ad esempio, ci sono le Conference East e West.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Allo stesso modo, in NFL ci sono l'AFC (American Football
                     Conference) e la NFC (National Football Conference), mentre
                     in MLB ci sono l'AL (American League) e l'NL (National
                     League).
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Ogni Conference si suddivide ulteriormente in Division.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Nella NBA, ci sono 3 division, ognuna con 5 squadre. In
                     totale, ci sono 15 squadre ad Est e 15 squadre ad Ovest, per
                     un totale di 30 squadre.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     La classifica viene determinata dalla percentuale di
                     vittorie di ogni squadra. Quindi, accanto al nome di ogni
                     squadra, troverete sempre due numeri che indicano le partite
@@ -447,11 +447,11 @@
                   <h3 class="mb-2 text-xl font-medium leading-tight">
                     Ogni squadra gioca 82 partite durante la Regular Season.
                   </h3>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Le prime 6 squadre di ogni Conference vanno direttamente ai
                     Playoff.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Le squadre dalla 7ª alla 10ª posizione per ogni conference
                     partecipano a un torneo chiamato Play-in Tournament per
                     decidere le ultime due squadre che entreranno nei Playoff.
@@ -475,7 +475,7 @@
                       giocano per ottenere l'ultimo ottavo posto nei Playoff.
                     </li>
                   </ul>
-                  <p class="mt-4 text-base">
+                  <p class="mt-4 lg:text-base">
                     In breve, queste sono alcune delle situazioni che possono
                     accadere durante una partita di basket quando si parla di
                     infrazioni e falli.
@@ -504,12 +504,12 @@
               </div>
               <div class="flex lg:flex-nowrap flex-wrap justify-between items-center">
                 <div class="p-6 lg:w-[45%] w-full">
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Le 8 squadre che si sfideranno per il titolo giocheranno nei
                     playoff, seguendo un tabellone tradizionale in cui la prima
                     della regular season affronta l'ultima e così via.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Ogni serie di partite si svolge al meglio delle 7 partite,
                     quindi per passare ai turni successivi dei playoff, una
                     squadra deve vincere 4 partite.
@@ -534,7 +534,7 @@
               </div>
               <div class="flex lg:flex-row-reverse lg:flex-nowrap flex-wrap items-center">
                 <div class="p-6 lg:w-[50%] w-full justify-start">
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     <span class="font-bold"
                       >Cosa vincono i campioni delle Finals?</span
                     >
@@ -542,7 +542,7 @@
                     ma ciò che attira più attenzione è l'anello consegnato ai
                     giocatori nella stagione successiva.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     <span class="font-bold"
                       >Quanto vale l'anello di campioni NBA?</span
                     >
@@ -551,17 +551,17 @@
                     "championship ring" fa aumentare il suo valore con ogni
                     titolo vinto.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Per esempio, i Lakers hanno incaricato Jason of Beverly
                     Hills, un negozio di gioielli di lusso, di creare l'anello
                     per il titolo del 2020.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     Questo negozio ha già realizzato anelli per i Golden State
                     Warriors, i Lakers nel 2009 e 2010, i Dodgers (MLB) nel 2018
                     e ha celebrato i successi di Chelsea e Atletico Madrid.
                   </p>
-                  <p class="mb-4 text-base">
+                  <p class="mb-4 lg:text-base">
                     L'anello dei Lakers del 2019 ha 804 pietre, tra cui 15,5
                     carati di diamanti bianchi e gialli, oltre a 0,95 carati di
                     pietre di ametista viola Lakers. È il più pesante mai
@@ -570,7 +570,7 @@
                     numero del giocatore inciso sull'anello ha uno sfondo a
                     forma di serpente, in omaggio a Kobe Bryant.
                   </p>
-                  <p class="mb-10 text-base">
+                  <p class="mb-10 lg:text-base">
                     <span class="font-bold text-xl">Curiosità:</span> L'ideatore
                     degli anelli, Jason Arasheben, ha dichiarato che gli anelli
                     dei Lakers sono i più costosi della storia della NBA,
@@ -597,31 +597,33 @@
         </section>
         <section *ngIf="selectedRegole === false">
           <section>
-            <h3 class="m-4 text-base">
+            <div class="w-full">
+              <h3 class="m-4 lg:text-base text-justify">
               Il glossario utilizzato nella NBA è molto ricco e in questa pagina
               troverai una lista completa dei nomi tecnici che ti serviranno per
               analizzare e capire al meglio le statistiche e risultati delle
               partite
             </h3>
-            <div class="w-full h-72 inline-flex justify-center mb-12 mt-12">
+            </div>
+            <div class="w-full altezza2 h:32 inline-flex justify-center mb-12 mt-12">
               <img
                 class="object-cover w-full rounded-[25px]"
-                src="https://edukai.kai.id/pluginfile.php/60254/course/overviewfiles/glossary%20letters.png"
+                src="../../../assets/immagini sito/GLOSSARIO2.png"
                 alt=""
               />
             </div>
           </section>
           <section>
             <div class="w-full flex flex-nowrap">
-              <div class="w-[20%] h-full rounded-xl pt-2 pb-2">
+              <div class="lg:w-[20%] w-full lg:block flex flex-wrap h-full rounded-xl pt-2 pb-2 lg:bg-tertiary">
                 <p class="text-xl font-bold text-center">SALTA A:</p>
                 <div
                   (click)="scrollToSection(i)"
                   [class.selected]="selectedSection === i"
-                  class="hover:cursor-pointer flex justify-center bg-primary rounded-xl m-4 text-center"
+                  class="hover:cursor-pointer flex justify-center bg-primary rounded-xl m-4 text-center w-full lg:w-auto"
                   *ngFor="let item of jsonInfo; let i = index"
                 >
-                  <button class="m-4 text-base text-white">
+                  <button class="m-4 lg:text-base text-xs text-white">
                     {{ jsonInfo[i].titolo }}
                   </button>
                 </div>
@@ -633,7 +635,7 @@
                   *ngFor="let item of jsonInfo; let i = index"
                 >
                   <p
-                    class="m-2 text-basefont-bold text-xl"
+                    class="m-2 font-bold text-xl"
                     [id]="'' + jsonInfo[i].id"
                   >
                     {{ jsonInfo[i].titolo }}
