--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -50,7 +50,7 @@
                             </ul>
                         </div>
                         <div class="w-full h-full border-t-4 border-white">
-                            <!-- tabella statistiche squadra -->
+                            caio
                         </div>
                     </div>
                     <div class="my-10 flex w-full justify-center">
